Refs #69765 CCA: Fixed scrollbars on time series tool.

--- a/eea/climateadapt/theme/climateadapt/static/style.css
+++ b/eea/climateadapt/theme/climateadapt/static/style.css
@@ -1411,6 +1411,12 @@ li.dropdown-submenu {
     padding-left: 1em;
 }
 
+/* time series tool */
+
+.subsection-time-series-tool #content {
+    margin: 0px !important;
+}
+
 */ bottom menu in urban ast pages */
 
 #bottom-menu {
